--- a/style2.css
+++ b/style2.css
@@ -1,13 +1,15 @@
 body{
-    background-color: #000000;
     font-family: 'Harmattan', sans-serif;
+    background-image: url(./pic/ca.jpg);
+    background-position:50% 50%;
+    background-size: cover;
     
 }
 .sign-up{
     width: 300px;
     height: 450px;
     box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.3);
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0.384);
     padding: 20px;
     margin: 8% auto 0;
     text-align: center;
@@ -21,7 +23,7 @@ body{
     padding: 10px;
     border: none;
     outline: none;
-    background-color: rgba(194, 188, 188, 0.89);
+    background-color: rgba(194, 188, 188, 0.788);
 }
 .input-box{
     border-radius: 20px;
@@ -30,7 +32,6 @@ body{
     width: 80%;
     border: 1px solid #999;
     outline: none;
-   
 }
 img{
     width: 50px;
@@ -45,7 +46,6 @@ img{
     width: 60px;
     padding: 10px;
     margin-left: 20px;
-
 }
 
 
