--- a/style4.css
+++ b/style4.css
@@ -1,6 +1,5 @@
 body{
-    background-color: #fca311;
-    
+    background-color:  #f0a938;
 }
 .back-btn{
     border-radius: 20px;
@@ -10,13 +9,18 @@ body{
     width: 60px;
     padding: 10px;
     margin-left: 20px;
-
 }
 h1{
-    font-size: 70px;
+    display: inline-flex;
+    padding-left: 70px;
+    padding-right: 70px;
+    font-size: 50px;
     color: white;
     text-align: center;
     font-family: 'Harmattan', sans-serif;
+    background-color: rgba(0, 0, 0, 0.39);
+    margin-left:550px;
+    border-radius: 30px;
  }
  img{
     
