--- a/style5.css
+++ b/style5.css
@@ -1,13 +1,18 @@
 body{
-    background-color: #fca311;
+    background-color: #f0a938;
+    padding-bottom: 50px;
 }
-
-
 h1{
-    font-size: 70px;
+    display: inline-flex;
+    padding-left: 70px;
+    padding-right: 70px;
+    font-size: 50px;
     color: white;
     text-align: center;
     font-family: 'Harmattan', sans-serif;
+    background-color: rgba(0, 0, 0, 0.39);
+    margin-left:570px;
+    border-radius: 30px;
  }
 
  h3{
@@ -24,7 +29,6 @@ h1{
     width: 60px;
     padding: 10px;
     margin-left: 20px;
-
 }
 
 .boxs{
@@ -37,7 +41,7 @@ h1{
    width: 210px;
    margin-top: 70px;
    border-radius: 20px;
-   border: 5px solid  #14213d;                         
+   border:  3px solid  #000000b7;                         
    margin-left:15px;
    padding: 10px;
 }
